[workspace]
members = [
  "macro"
]

[package]
authors = ["Tangram <root@tangram.dev"]
description = "Serialization library for Rust."
documentation = "https://docs.rs/buffalo"
edition = "2021"
homepage = "https://github.com/tangramdotdev/buffalo"
license = "MIT"
name = "buffalo"
publish = true
repository = "https://github.com/tangramdotdev/buffalo"
rust-version = "1.57"
version = "0.4.0"

[lib]
path = "lib.rs"

[dependencies]
bitvec = { version = "1", optional = true }
buffalo_macro = { version = "0.1", path = "macro" }
derive_deref = "1"
ndarray = { version = "0.15", optional = true }
num = "0.4"
