[workspace]
members = [
  "macro"
]

[workspace.package]
authors = ["Tangram <root@tangram.dev"]
description = "Buffalo is a binary serialization format that gives you ultimate control."
documentation = "https://docs.rs/buffalo"
edition = "2021"
homepage = "https://github.com/tangramdotdev/buffalo"
license = "MIT"
publish = true
repository = "https://github.com/tangramdotdev/buffalo"
version = "0.4.1"

[package]
name = "buffalo"

authors = { workspace = true }
description = { workspace = true }
documentation = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
publish = { workspace = true }
repository = { workspace = true }
version = { workspace = true }

[lib]
path = "lib.rs"

[dependencies]
bitvec = { version = "1", optional = true }
buffalo_macro = { version = "0.4", path = "macro" }
derive_deref = "1"
ndarray = { version = "0.15", optional = true }
num = "0.4"
