[package]
authors = ["Tangram <root@tangram.dev"]
description = "Serialization library for Rust."
documentation = "https://docs.rs/buffalo"
edition = "2018"
homepage = "https://github.com/tangramdotdev/buffalo"
license = "MIT"
name = "buffalo_macro"
publish = true
repository = "https://github.com/tangramdotdev/buffalo"
version = "0.1.0"

[lib]
path = "lib.rs"
proc-macro = true

[dependencies]
heck = "0.3"
proc-macro2 = "1"
quote = "1"
syn = { version = "1", features = ["full"] }
